--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "formspree-deploy": "formspree deploy"
   },
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
