--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "formspree-deploy": "formspree deploy"
   },
   "dependencies": {
+    "@formspree/cli": "^0.9.6",
     "@formspree/react": "^3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
